{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 68,
  "lineage": "629f0681-10b8-7154-1623-3fd16153deaf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08d9527e062c57578",
            "arn": "arn:aws:ec2:eu-west-1:052032053375:elastic-ip/eipalloc-08d9527e062c57578",
            "association_id": "eipassoc-0d9c7f7f5de9456fb",
            "domain": "vpc",
            "id": "eipalloc-08d9527e062c57578",
            "instance": "i-0e4ac62a868eb8b11",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0a4a2a107bfcb6142",
            "private_dns": "ip-10-0-1-229.eu-west-1.compute.internal",
            "private_ip": "10.0.1.229",
            "public_dns": "ec2-34-250-119-137.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.250.119.137",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-1",
            "tags": {
              "Name": "concord-consulting-eip"
            },
            "tags_all": {
              "Name": "concord-consulting-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.mysql",
            "aws_db_subnet_group.rds_subnets",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.web",
            "aws_internet_gateway.igw",
            "aws_security_group.rds_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08ae1035a3a101a88",
            "arn": "arn:aws:ec2:eu-west-1:052032053375:instance/i-0e4ac62a868eb8b11",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "concord-consulting-ec2-profile",
            "id": "i-0e4ac62a868eb8b11",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a4a2a107bfcb6142"
              }
            ],
            "primary_network_interface_id": "eni-0a4a2a107bfcb6142",
            "private_dns": "ip-10-0-1-229.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.229",
            "public_dns": "ec2-54-194-69-15.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.194.69.15",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-091d6458b0b242a2f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a12ab1253dc564b5",
            "tags": {
              "Name": "concord-consulting-web-server"
            },
            "tags_all": {
              "Name": "concord-consulting-web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-053a20f311efbe822"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "052032053375",
            "id": "i-0e4ac62a868eb8b11",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_db_instance.mysql",
            "aws_db_subnet_group.rds_subnets",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.rds_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:052032053375:internet-gateway/igw-0658aaf791aaf7a21",
            "id": "igw-0658aaf791aaf7a21",
            "owner_id": "052032053375",
            "region": "eu-west-1",
            "tags": {
              "Name": "concord-consulting-igw"
            },
            "tags_all": {
              "Name": "concord-consulting-igw"
            },
            "vpc_id": "vpc-0927105eac300e305"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:052032053375:route-table/rtb-0a54c753275656faa",
            "id": "rtb-0a54c753275656faa",
            "owner_id": "052032053375",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0658aaf791aaf7a21",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "concord-consulting-rt"
            },
            "tags_all": {
              "Name": "concord-consulting-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0927105eac300e305"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "052032053375",
            "id": "rtb-0a54c753275656faa",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0094a14908f4362fb",
            "region": "eu-west-1",
            "route_table_id": "rtb-0a54c753275656faa",
            "subnet_id": "subnet-0a12ab1253dc564b5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:052032053375:security-group/sg-0ece13c206a719d15",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ece13c206a719d15",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-053a20f311efbe822"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "concord-consulting-rds-sg",
            "name_prefix": "",
            "owner_id": "052032053375",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "concord-consulting-rds-sg"
            },
            "tags_all": {
              "Name": "concord-consulting-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0927105eac300e305"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "052032053375",
            "id": "sg-0ece13c206a719d15",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:052032053375:security-group/sg-053a20f311efbe822",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053a20f311efbe822",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "75.155.244.239/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "concord-consulting-web-sg",
            "name_prefix": "",
            "owner_id": "052032053375",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "concord-consulting-web-sg"
            },
            "tags_all": {
              "Name": "concord-consulting-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0927105eac300e305"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "052032053375",
            "id": "sg-053a20f311efbe822",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:052032053375:subnet/subnet-05521a0f4ea06ac3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05521a0f4ea06ac3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052032053375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "concord-consulting-private-subnet-a"
            },
            "tags_all": {
              "Name": "concord-consulting-private-subnet-a"
            },
            "vpc_id": "vpc-0927105eac300e305"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "052032053375",
            "id": "subnet-05521a0f4ea06ac3a",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:052032053375:subnet/subnet-0d914bdf506e909d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d914bdf506e909d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052032053375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "concord-consulting-private-subnet-b"
            },
            "tags_all": {
              "Name": "concord-consulting-private-subnet-b"
            },
            "vpc_id": "vpc-0927105eac300e305"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "052032053375",
            "id": "subnet-0d914bdf506e909d8",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:052032053375:subnet/subnet-0a12ab1253dc564b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a12ab1253dc564b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "052032053375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "concord-consulting-public-subnet"
            },
            "tags_all": {
              "Name": "concord-consulting-public-subnet"
            },
            "vpc_id": "vpc-0927105eac300e305"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "052032053375",
            "id": "subnet-0a12ab1253dc564b5",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:052032053375:vpc/vpc-0927105eac300e305",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05463aba3bca8b69b",
            "default_route_table_id": "rtb-07f950cbcbd7f7669",
            "default_security_group_id": "sg-00b251929f9f24ab6",
            "dhcp_options_id": "dopt-0ce31675e403b6f78",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0927105eac300e305",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07f950cbcbd7f7669",
            "owner_id": "052032053375",
            "region": "eu-west-1",
            "tags": {
              "Name": "concord-consulting-vpc"
            },
            "tags_all": {
              "Name": "concord-consulting-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "052032053375",
            "id": "vpc-0927105eac300e305",
            "region": "eu-west-1"
          }
        }
      ]
    }
  ]
}